Fix center alignment of card images in Firefox.

--- a/css/main.scss
+++ b/css/main.scss
@@ -417,6 +417,10 @@ blockquote {
         bottom: 0;
         max-width: 100%;
         max-height: 100%;
+        /* fix for center alignment in Firefox */
+        left: 0;
+        right: 0;
+        margin: 0 auto;
       }
     }
 
